Fixing menu issues on iphones

--- a/docroot/sites/all/themes/ambitious/css/issue-fixing.css
+++ b/docroot/sites/all/themes/ambitious/css/issue-fixing.css
@@ -1413,7 +1413,7 @@ fieldset.group-hidden {
 @media (max-width: 520px) {
   /* line 1122, ../sass/issue-fixing.scss */
   .logged-in #block-menu-menu-header-top-menu li {
-    padding: 0 10px;
+    padding: 0 5px;
   }
 }
 @media (max-width: 520px) {
