--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -923,6 +923,10 @@ nav {
       list-style: none;
       padding: 0 6px;
       display: inline;
+
+      @include breakpoint($mini-mobile){
+        padding: 0;
+      }
       
       a{
         // margin:0;
